@@ -1,6 +1,8 @@
 ﻿
 2007-07-19  Roland Clobus <rclobus@bigfoot.com>
 	* common/gtk/guimap.c: gmap->area was unref'd too often.
+	* client/callback.h, client/gtk/player.c: Cleanup of
+	player->user_data.
 
 2007-06-05  Roland Clobus <rclobus@bigfoot.com>
 	* common/gtk/gtkbugs.c: action_set_sensitive is still (Gtk+-2.10) not
